constant light mode to the activity_main

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
+        <activity android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
             android:name=".MainActivity"
             android:exported="false">
         </activity>
