--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
-plugins {
-    id 'com.android.application'
-}
+apply plugin : 'com.android.application'
+apply plugin : 'realm-android'
+//plugins {
+//    id 'com.android.application'
+//}
 
 android {
     compileSdk 32
@@ -38,4 +40,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.android.volley:volley:1.2.1'
+
 }
