Done with the recylerview working in the Token Dashboard - Shreyas

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name=".tokenDashboard"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"/>
         <activity
             android:name=".tokenNumberCreation"
             android:exported="false"
