--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.WalkinSale"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".bill_cardview"
+            android:exported="false" />
+        <activity
             android:name=".billToken"
             android:exported="false"
             android:theme="@style/Theme.MaterialComponents.Light.NoActionBar" />
