product finder screen done started with the backend  - Shreyas

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.WalkinSale"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".productFinder"
+            android:exported="false" />
+        <activity
             android:name=".CounterIncentiveReport"
             android:exported="false" />
         <activity
