--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.walk_in_sale">
+    package="com.example.geeta_dresses">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".MyApplication"
+        android:name="com.example.geeta_dresses.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_webp"
         android:label="@string/app_name"
@@ -15,44 +15,23 @@
         android:theme="@style/Theme.WalkinSale"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".ProductFinder"
+            android:name="com.example.geeta_dresses.ProductFinder"
             android:exported="false"
             android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"/>
         <activity
-            android:name=".CounterIncentiveReport"
-            android:exported="false" />
-        <activity
-            android:name=".IncentiveReport"
-            android:exported="false" />
-        <activity
-            android:name=".bill_cardview"
-            android:exported="false" />
-        <activity
-            android:name=".billToken"
+            android:name="com.example.geeta_dresses.tokenDashboard"
             android:exported="false"
             android:theme="@style/Theme.MaterialComponents.Light.NoActionBar" />
         <activity
-            android:name=".tokenDashboard"
+            android:name="com.example.geeta_dresses.tokenNumberCreation"
             android:exported="false"
             android:theme="@style/Theme.MaterialComponents.Light.NoActionBar" />
         <activity
-            android:name=".tokenNumberCreation"
+            android:name="com.example.geeta_dresses.tokenHome"
             android:exported="false"
             android:theme="@style/Theme.MaterialComponents.Light.NoActionBar" />
         <activity
-            android:name=".createToken"
-            android:exported="false"
-            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar" />
-        <activity
-            android:name=".tokenHome"
-            android:exported="false"
-            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar" />
-        <activity
-            android:name=".AddOrder"
-            android:exported="false"
-            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar" />
-        <activity
-            android:name=".Dashboard"
+            android:name="com.example.geeta_dresses.Dashboard"
             android:exported="false"
             android:theme="@style/Theme.MaterialComponents.Light.NoActionBar" />
 
@@ -61,7 +40,7 @@
             android:resource="@xml/network_security_config" />
 
         <activity
-            android:name=".SplashScreen"
+            android:name="com.example.geeta_dresses.SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -70,7 +49,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.geeta_dresses.MainActivity"
             android:exported="false"
             android:theme="@style/Theme.MaterialComponents.Light.NoActionBar" />
 
