--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="com.example.geeta_dresses.MyApplication"
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_webp"
         android:label="@string/app_name"
@@ -15,23 +15,27 @@
         android:theme="@style/Theme.WalkinSale"
         android:usesCleartextTraffic="true">
         <activity
-            android:name="com.example.geeta_dresses.ProductFinder"
-            android:exported="false"
-            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"/>
-        <activity
-            android:name="com.example.geeta_dresses.tokenDashboard"
+            android:name=".ExistingToken"
             android:exported="false"
             android:theme="@style/Theme.MaterialComponents.Light.NoActionBar" />
         <activity
-            android:name="com.example.geeta_dresses.tokenNumberCreation"
+            android:name=".ProductFinder"
             android:exported="false"
             android:theme="@style/Theme.MaterialComponents.Light.NoActionBar" />
         <activity
-            android:name="com.example.geeta_dresses.tokenHome"
+            android:name=".tokenDashboard"
             android:exported="false"
             android:theme="@style/Theme.MaterialComponents.Light.NoActionBar" />
         <activity
-            android:name="com.example.geeta_dresses.Dashboard"
+            android:name=".tokenNumberCreation"
+            android:exported="false"
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar" />
+        <activity
+            android:name=".tokenHome"
+            android:exported="false"
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar" />
+        <activity
+            android:name=".Dashboard"
             android:exported="false"
             android:theme="@style/Theme.MaterialComponents.Light.NoActionBar" />
 
@@ -40,7 +44,7 @@
             android:resource="@xml/network_security_config" />
 
         <activity
-            android:name="com.example.geeta_dresses.SplashScreen"
+            android:name=".SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -49,7 +53,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.geeta_dresses.MainActivity"
+            android:name=".MainActivity"
             android:exported="false"
             android:theme="@style/Theme.MaterialComponents.Light.NoActionBar" />
 
