Added Manager Login and manager Privillage with the dynamic dialog box with all the fetching data -Shreyas

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.WalkinSale"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".listView"
+            android:exported="false" />
+        <activity
             android:name=".ExistingToken"
             android:exported="false"
             android:theme="@style/Theme.MaterialComponents.Light.NoActionBar" />
